thead in table without tbody causes table height doubling https://bugs.webkit.org/show_bug.cgi?id=37244

Reviewed by Ojan Vafai.

Source/WebCore:

Tests: fast/table/double-height-table-no-tbody-expected.html
       fast/table/double-height-table-no-tbody.html

The bug is caused by the layout code would wrongly assuming that a
table without a <tbody> is an empty table. We would set the logical
height to the style's logical height wrongly before inflating the
logical height to account for the section(s). This would cause us
to increase past our needed size thus the bug.

* rendering/RenderTable.cpp:
(WebCore::RenderTable::layout):
A table is empty if it does not have any top section, not just a <tbody>.
The test uncovered an issue with height distribution in layoutRows where we
would distribute the extra height to the first <tbody> not section.

LayoutTests:

* fast/table/double-height-table-no-tbody-expected.html: Added.
* fast/table/double-height-table-no-tbody.html: Added.
Test that we properly lay out tables with only a <thead> or <tfoot>
exactly like a table with only a <tbody>.

* platform/chromium-linux/tables/mozilla/bugs/bug27038-1-expected.png:
* platform/chromium-linux/tables/mozilla/bugs/bug27038-2-expected.png:
* platform/chromium-win/tables/mozilla/bugs/bug27038-1-expected.txt:
* platform/chromium-win/tables/mozilla/bugs/bug27038-2-expected.txt:
This is neither a progression nor a regression. We are not doing the right
thing as we don't distribute the extra logical height evenly over our sections.
Now we give the extra height to the <thead> (first section) instead of the <tbody>.

* platform/chromium/test_expectations.txt:
* platform/efl/test_expectations.txt:
* platform/gtk/test_expectations.txt:
* platform/mac/test_expectations.txt:
* platform/qt/test_expectations.txt:
* platform/win/test_expectations.txt:
Marked the previous tests as needing a new baseline.


Canonical link: https://commits.webkit.org/95806@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107971 268f45cc-cd09-0410-ab3c-d52691b4dbfc